<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bank_kirbo" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:text="@string/eng_title"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <TextView
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/eng_des" />

            <TextView
                android:id="@+id/dbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/tomato"
                android:text="@string/eng_dbs"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageViewDBS"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/dbs" />

            <TextView
                android:id="@+id/ocbc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/tomato"
                android:textSize="30dp"
                android:text="@string/eng_ocbc" />

            <ImageView
                android:id="@+id/imageViewOCBC"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ocbc" />

            <TextView
                android:id="@+id/uob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/tomato"
                android:textSize="30dp"
                android:text="@string/eng_uob" />

            <ImageView
                android:id="@+id/imageViewUOB"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/uob" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>